Added profile picture Fixed shuffle logic